--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Search User from list with his details.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/index.js"
   },
   "author": "ishwari",
   "license": "ISC",
